[package]
name = "rhosts"
version = "0.0.1"
authors = ["Steven Black <hosts@sbc.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/StevenBlack/rhosts"
description = "Tools to mess with hosts files."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.3"
anyhow = "1.0.44"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
clap = { version = "3.1", features = ["derive", "cargo"] }
clap_complete = "3.0"
chrono = "0.4"
futures = "0.3"
psl = "2.0.70"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
directories = "4.0.1"
num-format = "0.4.0"
arboard = "2.1.1"
async-task-group = "0.2.1"
serde = { version = "1.0.138", features = ["serde_derive"] }
serde_derive = "1.0.138"
serde_json = "1.0.82"

[dev-dependencies]
semver = "1.0"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
anyhow = "1.0.44"

[[bin]]
name = "rhosts"
