[package]
name = "rhosts"
version = "0.0.2"
authors = ["Steven Black <hosts@sbc.io>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/StevenBlack/rhosts"
homepage = "https://github.com/StevenBlack/rhosts"
description = "Tools to mess with hosts files."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.3"
anyhow = "1.0.44"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
chrono = "0.4"
futures = "0.3"
psl = "2.0.70"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
directories = "4.0.1"
num-format = "0.4.0"
arboard = "2.1.1"
async-task-group = "0.2.1"
serde = { version = "1.0.138", features = ["serde_derive"] }
serde_derive = "1.0.138"
serde_json = "1.0.82"
array_tool = "1.0.3"
thousands = "0.2.0"
clap = { version = "4.0.15", features = ["derive", "cargo"] }
clap_complete = "4.0.2"

[dev-dependencies]
semver = "1.0"
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
anyhow = "1.0.44"

[[bin]]
# name = "rhosts"
name = "rh"           # The name of the target.
path = "src/main.rs"   # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
