[package]
name = "rhosts"
version = "0.0.5"
authors = ["Steven Black <hosts@sbc.io>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/StevenBlack/rhosts"
homepage = "https://github.com/StevenBlack/rhosts"
description = "Tools to mess with hosts files."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.6"
anyhow = "1.0.83"
async-std = { version = "1.13.2", features = ["unstable", "attributes"] }
chrono = "0.4.44"
futures = "0.3.30"
psl = "2.1.37"
regex = "1.10.4"
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
directories = "6.0.0"
num-format = "0.4.4"
arboard = "2.1.1"
async-task-group = "0.2.1"
serde = { version = "1.0.201", features = ["serde_derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.117"
array_tool = "1.0.3"
thousands = "0.2.0"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
clap_complete = "4.5.2"
indexmap = "2.10.0"

[dev-dependencies]
semver = "1.0"
async-std = { version = "1.13.2", features = ["unstable", "attributes"] }
anyhow = "1.0.83"

[[bin]]
# name = "rhosts"
name = "rh"            # The name of the target.
path = "src/main.rs"   # The source file of the target.
test = true            # Is tested by default.
doctest = true         # Documentation examples are tested by default.
bench = true           # Is benchmarked by default.
